config/mgmt/auth-config/ingress.ytt.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: pinniped-supervisor
    name: pinniped-supervisor
    namespace: pinniped-supervisor
spec:
    ports:
        - port: 8080
          protocol: TCP
    selector:
        app: pinniped-supervisor
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1e25ew05v62a720vhsetzrhalehzpsv6l6c5usw2mn4lley85ssnsajz2v3
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVTVRLMGc2TG92K2NQeVJT
[...]
            hJHRIUBI9zjMnTqCMDBb4Uyt1llZopKRLKlPRUdW7QSUVbL4kZcSiQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-03-23T11:25:01Z"
    mac: ENC[AES256_GCM,data:zKTyOzT9oBpenVBuA5QjLZyEieYzezqs8uhM2/BTOT2gTj8Sn39voYTHcqwQbwLwPtC/qcrIP6fqzkjAM5Xwag7YrqaxrCXqpoxxs9wyb1/Lmai9cq8EBHKhcgl/5PoT1lf/t+AvsGB2rUM+ybRpjutcaX3pXlVlDbNNbThn88k=,iv:Wi5cc0tjTAxj4LpYs8O5ehPsb7PKFPy1goLFWNvAGno=,tag:LkAfqemJpVQnxwEnBKBlcA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|.*client.secret.*)$
    version: 3.7.2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pinniped-supervisor
    namespace: pinniped-supervisor
    annotations:
        ingress.kubernetes.io/force-ssl-redirect: "true"
        projectcontour.io/tls-cert-namespace: secure-ingress
spec:
    tls:
        - hosts:
            - pinniped.yaml.tv
          secretName: wildcard-yaml-tv
    rules:
        - host: pinniped.yaml.tv
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: pinniped-supervisor
                        port:
                            number: 8080
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1e25ew05v62a720vhsetzrhalehzpsv6l6c5usw2mn4lley85ssnsajz2v3
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVTVRLMGc2TG92K2NQeVJT
[...]
            hJHRIUBI9zjMnTqCMDBb4Uyt1llZopKRLKlPRUdW7QSUVbL4kZcSiQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-03-23T11:25:01Z"
    mac: ENC[AES256_GCM,data:zKTyOzT9oBpenVBuA5QjLZyEieYzezqs8uhM2/BTOT2gTj8Sn39voYTHcqwQbwLwPtC/qcrIP6fqzkjAM5Xwag7YrqaxrCXqpoxxs9wyb1/Lmai9cq8EBHKhcgl/5PoT1lf/t+AvsGB2rUM+ybRpjutcaX3pXlVlDbNNbThn88k=,iv:Wi5cc0tjTAxj4LpYs8O5ehPsb7PKFPy1goLFWNvAGno=,tag:LkAfqemJpVQnxwEnBKBlcA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|.*client.secret.*)$
    version: 3.7.2
